Service layer, access methods, and more, oh my!
Abstraction of model and service layer added. Moved from Polymer
properties to ES6 access methods. Next up - tags seem to be glitchy.

--- a/web/components/toodles-action.html
+++ b/web/components/toodles-action.html
@@ -11,8 +11,6 @@
         opacity: 0;
         right: 16px;
         position: absolute;
-        transition-duration: 0.50s;  
-        transition-property: opacity;          
       }
 
       #compose {
@@ -95,7 +93,7 @@
       }
 
       onTask( evt ) {
-        console.log( 'Task.' );
+        this.dispatchEvent( new CustomEvent( Action.CREATE_TASK, null ) );          
       }
     }
 
