--- a/web/components/toodles-authentication.html
+++ b/web/components/toodles-authentication.html
@@ -2,7 +2,7 @@
 <link rel="import" href="/components/toodles-check.html">
 <link rel="import" href="/components/toodles-input.html">
 
-<dom-module id="toodles-account">
+<dom-module id="toodles-authentication">
   <template>
     <style>
       :host {
@@ -62,38 +62,67 @@
       }
 
       .photo {
-        background-image: url( /img/account.black.svg );
+        background-image: url( /img/ibm.svg );
         background-position: center;
         background-repeat: no-repeat;
-        background-size: contain;
+        background-size: 72px;
         height: 56px;
         margin: 16px 10px 16px 10px;
-        opacity: 0.38;
       }
     </style>
     <div class="dialog">
       <div class="photo"></div>
-      <toodles-input id="email" type="text" placeholder="Email" value="{{email}}"></toodles-input>
-      <toodles-input id="password" type="password" placeholder="Password" value="{{password}}"></toodles-input>
-      <button on-click="onSignIn">Sign In</button>
-      <toodles-check label="Stay signed in"></toodles-check>
+      <toodles-input id="email"></toodles-input>
+      <toodles-input id="password"></toodles-input>
+      <button id="signin" on-click="onSignIn">Sign In</button>
+      <toodles-check id="check"></toodles-check>
     </div>
     <p class="create" on-click="onCreate">Create an account</p>
   </template>
   <script>
-    class Account extends Polymer.Element {  
-      static get is() { return 'toodles-account' }
+    class Authentication extends Polymer.Element {  
+      static get is() { return 'toodles-authentication' }
 
       connectedCallback() {
         super.connectedCallback();
+
+        this.id = null;
+
+        this.$.email.placeholder = 'Email';
+        this.$.email.value = 'krhoyt';
+
+        this.$.password.placeholder = 'Password';
+        this.$.password.type = 'password';
+
+        this.$.check.label = 'Stay signed in';
       }
 
-      static get properties() {
-        return {
-          id: String,
-          email: String,
-          password: String
+      set email( value ) {
+        this.$.email.value = value;
+      }
+
+      get email() {
+        return this.$.email.value;
+      }
+
+      set loading( value ) {
+        if( value ) {
+          this.$.signin.classList.add( 'loading' );
+        } else {
+          this.$.signin.classList.remove( 'loading' );
         }
+      }
+
+      get loading() {
+        return this.$.signin.classList.contains( 'loading' );
+      }
+
+      set password( value ) {
+        this.$.password.value = value;
+      }
+
+      get password() {
+        return this.$.password.value;
       }
 
       hide() {
@@ -101,6 +130,8 @@
           opacity: 0,
           onComplete: function( element ) {
             element.style.display = 'none';
+            element.password = '';
+            element.loading = false;
           },
           onCompleteParams: [this]
         } );
@@ -114,13 +145,12 @@
       }
 
       onCreate( evt ) {
-        console.log( 'Create.' );
+        console.log( 'Create account.' );
       }
 
       onSignIn( evt ) {
-        evt.target.classList.add( 'loading' );
-
-        this.dispatchEvent( new CustomEvent( Account.SIGN_IN, {
+        this.loading = true;
+        this.dispatchEvent( new CustomEvent( Authentication.SIGN_IN, {
           detail: {
             email: this.email,
             password: this.password
@@ -129,8 +159,8 @@
       }   
     }
 
-    Account.SIGN_IN = 'account_sign_in';
+    Authentication.SIGN_IN = 'authentication_sign_in';
 
-    customElements.define( Account.is, Account );    
+    customElements.define( Authentication.is, Authentication );    
   </script>
 </dom-module>
