--- a/web/components/toodles-remain.html
+++ b/web/components/toodles-remain.html
@@ -11,6 +11,7 @@
         border-left: solid 1px rgba( 0, 0, 0, 0.12 );
         border-radius: 0 2px 2px 0;          
         color: rgba( 0, 0, 0, 0.87 ); 
+        cursor: default;
         display: block;
         font-size: 14px;
         height: 48px;
@@ -33,16 +34,36 @@
 
       connectedCallback() {
         super.connectedCallback();
+        this._due = 0;
       }
 
-      static get properties() {
-        return {
-          due: {
-            type: Number,
-            observer: 'onDate',
-            value: 0
+      set due( value ) {
+        this._due = value;
+
+        if( this._due > 0 ) {
+          let end = new Date( this._due );
+          let now = new Date();
+          let difference = moment( end ).diff( now, 'days' );
+          let display = difference + ' days left';
+
+          this.$.label.classList.remove( 'shade' );
+
+          if( difference == 0 ) {
+            display = 'due today';
+            this.$.label.classList.add( 'shade' );
+          } else if( difference == 1 ) {
+            display = difference + ' day left';
+          } else if( difference < 0 ) {
+            display = Math.abs( difference ) + ' days ago';
+            this.$.label.classList.add( 'shade' );
           }
+
+          this.$.label.innerHTML = display;        
         }
+      }
+
+      get due() {
+        return _due;
       }
 
       hide() {
@@ -52,27 +73,6 @@
       show() {
         this.style.display = 'flex';
       }      
-
-      onDate( value, old ) {
-        let end = new Date( this.due );
-        let now = new Date();
-        let difference = moment( end ).diff( now, 'days' );
-        let display = difference + ' days left';
-
-        this.$.label.classList.remove( 'shade' );
-
-        if( difference == 0 ) {
-          display = 'due today';
-          this.$.label.classList.add( 'shade' );
-        } else if( difference == 1 ) {
-          display = difference + ' day left';
-        } else if( difference < 0 ) {
-          display = Math.abs( difference ) + ' days ago';
-          this.$.label.classList.add( 'shade' );
-        }
-
-        this.$.label.innerHTML = display;
-      }
     }
 
     customElements.define( Remain.is, Remain );    
