Sorting and filtering.
Tasks are now sorted upon initial display. Not yet sorted on changes.
Filtering now works. Calendar removed.

--- a/web/components/toodles-action.html
+++ b/web/components/toodles-action.html
@@ -5,7 +5,8 @@
     <style>
       :host {
         align-items: center;
-        bottom: 244px;
+        bottom: 244px; /* left in case calendar */
+        bottom: 188px;
         display: none;
         flex-direction: column;
         opacity: 0;
