--- a/web/components/toodles-calendar.html
+++ b/web/components/toodles-calendar.html
@@ -6,7 +6,8 @@
     <style>
       :host {
         border-bottom: 1px solid rgba( 0, 0, 0, 0.12 );
-        display: flex;
+        display: flex; /* left in case calendar */
+        display: none;
         flex-direction: row;
         height: 56px;
       }
